# yolo_trt_ros2

./: .gitignore  H2_DEPLOYMENT_AND_BENCHMARK.md  H2_ROS_RUNBOOK.md  INSPECTION_PERCEPTION.md  LICENSE  README.md
examples/: robot_publish_status_example.py  robot_subscribe_perception_example.py
src/detector_msgs/: CMakeLists.txt  package.xml
src/detector_msgs/msg/: Object2D.msg  Object2DArray.msg  Object3D.msg  Object3DArray.msg  RobotInspectionStatus.msg
src/yolo_trt_ros2/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/yolo_trt_ros2/config/: cabinet_controls_classes.example.txt  cabinet_controls_classes.txt  detector.yaml  inspection_cabinet.yaml  inspection_perception.yaml  yoloe_classes.example.txt
src/yolo_trt_ros2/launch/: inspection_perception.launch.py  yolo_detector.launch.py
src/yolo_trt_ros2/resource/: yolo_trt_ros2
src/yolo_trt_ros2/yolo_trt_ros2/: __init__.py  benchmark_topics_node.py  coordinate_projector_node.py  direct_realsense_node.py  integrated_perception_node.py  web_dashboard_node.py  yolo_detector_node.py
src/yolo_trt_ros2/yolo_trt_ros2/backends/: __init__.py  mock_backend.py  tensorrt_backend.py  ultralytics_backend.py
